src/test/ui/issues/1-9999/issue-8153.stderr
error[E0201]: duplicate definitions with name `bar`:
  --> $DIR/issue-8153.rs:11:5
   |
LL |     fn bar(&self) -> isize {1}
   |     -------------------------- previous definition of `bar` here
LL |     fn bar(&self) -> isize {2}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definition

error: aborting due to previous error

For more information about this error, try `rustc --explain E0201`.
